--- a/your-code/challenge-2.ipynb
+++ b/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[99, 51, 30, 80, 82, 96, 67, 42, 36, 54, 27, 45, 0, 32, 34, 31, 64, 29, 66, 74, 59, 7, 28, 4, 1, 81, 6, 88, 52, 90, 13, 19, 60, 17, 14, 33, 85, 97, 86, 92, 16, 71, 62, 87, 95, 83, 57, 93, 21, 15, 35, 61, 75, 65, 26, 63, 91, 94, 23, 47, 73, 41, 49, 39, 46, 43, 50, 5, 11, 53, 8, 68, 79, 69, 2, 18, 37, 48, 77, 44]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "sample_list_1 = random.sample(range(100),80)\n",
+    "\n",
+    "print(sample_list_1)"
    ]
   },
   {
@@ -54,11 +64,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set1 = set(sample_list_1)\n",
+    "len(set1)"
    ]
   },
   {
@@ -77,11 +99,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "sample_list_2 = []\n",
+    "\n",
+    "for i in random.sample(range(100),80):\n",
+    "    sample_list_2.append(i)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[42,\n",
+       " 67,\n",
+       " 44,\n",
+       " 89,\n",
+       " 59,\n",
+       " 11,\n",
+       " 71,\n",
+       " 35,\n",
+       " 16,\n",
+       " 84,\n",
+       " 43,\n",
+       " 62,\n",
+       " 76,\n",
+       " 90,\n",
+       " 65,\n",
+       " 54,\n",
+       " 25,\n",
+       " 2,\n",
+       " 24,\n",
+       " 98,\n",
+       " 91,\n",
+       " 22,\n",
+       " 7,\n",
+       " 31,\n",
+       " 85,\n",
+       " 10,\n",
+       " 9,\n",
+       " 0,\n",
+       " 68,\n",
+       " 30,\n",
+       " 93,\n",
+       " 97,\n",
+       " 51,\n",
+       " 73,\n",
+       " 53,\n",
+       " 96,\n",
+       " 66,\n",
+       " 48,\n",
+       " 36,\n",
+       " 58,\n",
+       " 26,\n",
+       " 86,\n",
+       " 29,\n",
+       " 14,\n",
+       " 33,\n",
+       " 12,\n",
+       " 46,\n",
+       " 79,\n",
+       " 20,\n",
+       " 82,\n",
+       " 21,\n",
+       " 47,\n",
+       " 45,\n",
+       " 13,\n",
+       " 78,\n",
+       " 4,\n",
+       " 95,\n",
+       " 60,\n",
+       " 19,\n",
+       " 77,\n",
+       " 80,\n",
+       " 61,\n",
+       " 88,\n",
+       " 64,\n",
+       " 6,\n",
+       " 50,\n",
+       " 94,\n",
+       " 34,\n",
+       " 37,\n",
+       " 38,\n",
+       " 41,\n",
+       " 1,\n",
+       " 40,\n",
+       " 28,\n",
+       " 63,\n",
+       " 92,\n",
+       " 70,\n",
+       " 5,\n",
+       " 57,\n",
+       " 49]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_list_2"
    ]
   },
   {
@@ -93,11 +218,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set2 = set(sample_list_2)\n",
+    "len(set2)"
    ]
   },
   {
@@ -109,11 +246,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "set3 = set(set1.difference(set2))"
    ]
   },
   {
@@ -125,11 +262,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "set4 = set2.difference(set1)"
    ]
   },
   {
@@ -141,11 +278,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "set5 = set1.intersection(set2)"
    ]
   },
   {
@@ -164,28 +301,134 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your code here\n"
+    "Voy explorar los sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set5)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Relationship of sets: len(set1) = len(set2) > len(set5) > len(set3) = len(set4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "#### Create an empty set called `set6`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "set6 = set()"
    ]
   },
   {
@@ -197,11 +440,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "set6.update(set3,set5)"
    ]
   },
   {
@@ -213,11 +456,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set1 == set6"
    ]
   },
   {
@@ -229,11 +483,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set1.issubset(set2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set1.issubset(set3)"
    ]
   },
   {
@@ -247,11 +532,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set7 = set3.union(set4,set5)\n",
+    "set8 = set1.union(set2)\n",
+    "\n",
+    "set7 == set8"
    ]
   },
   {
@@ -263,11 +562,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set1.pop()"
    ]
   },
   {
@@ -283,12 +593,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 4, 5, 6, 7, 8, 13, 14, 15, 16, 17, 18, 23, 26, 27, 28, 30, 32, 33, 34, 35, 36, 37, 42, 43, 44, 45, 46, 47, 48, 50, 52, 53, 54, 57, 60, 62, 63, 64, 65, 66, 67, 68, 73, 74, 75, 77, 80, 82, 83, 85, 86, 87, 88, 90, 92, 93, 94, 95, 96, 97}\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "\n",
+    "for i in list_to_remove:\n",
+    "        if i in set1:\n",
+    "            set1.remove(i)\n",
+    "print(set1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -307,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
