--- a/your-code/challenge-2.ipynb
+++ b/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[49, 11, 26, 73, 28, 2, 43, 1, 85, 62, 77, 50, 38, 86, 31, 61, 24, 46, 8, 42, 97, 20, 81, 9, 90, 12, 30, 14, 25, 48, 10, 70, 58, 76, 79, 65, 83, 7, 53, 91, 17, 51, 34, 55, 68, 29, 15, 37, 35, 3, 96, 100, 93, 6, 57, 27, 72, 99, 84, 54, 47, 22, 21, 67, 66, 64, 82, 44, 95, 36, 94, 52, 63, 32, 89, 74, 60, 0, 45, 33]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_1=random.sample(range(0,101),80)\n",
+    "print(sample_list_1)\n",
+    "len(sample_list_1)"
    ]
   },
   {
@@ -54,11 +75,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "set1= set(sample_list_1)\n",
+    "len(set1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "#Tiene sentido que siga siendo el mismo porque los datos erán unicos y un set solo trata con datos unicos"
    ]
   },
   {
@@ -77,11 +120,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[83, 23, 5, 97, 10, 62, 65, 63, 81, 51, 80, 85, 20, 94, 30, 38, 13, 83, 97, 24, 2, 2, 66, 82, 35, 8, 47, 69, 85, 97, 63, 90, 52, 72, 60, 92, 38, 44, 75, 97, 48, 49, 26, 42, 51, 6, 22, 70, 76, 95, 32, 94, 4, 1, 16, 89, 4, 74, 33, 53, 35, 80, 54, 15, 77, 72, 51, 33, 67, 73, 82, 81, 45, 93, 88, 87, 44, 56, 17, 91]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "#Notas para mi: me sale una lista muy grande pero yo solo quiero el primero y[0]\n",
+    "sample_list_2=[]\n",
+    "for x in range(80):\n",
+    "    y=random.sample(range(101),80)\n",
+    "    sample_list_2.append(y[0])\n",
+    "print(sample_list_2)\n",
+    "len(sample_list_2)"
    ]
   },
   {
@@ -93,11 +161,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 4, 5, 6, 8, 10, 13, 15, 16, 17, 20, 22, 23, 24, 26, 30, 32, 33, 35, 38, 42, 44, 45, 47, 48, 49, 51, 52, 53, 54, 56, 60, 62, 63, 65, 66, 67, 69, 70, 72, 73, 74, 75, 76, 77, 80, 81, 82, 83, 85, 87, 88, 89, 90, 91, 92, 93, 94, 95, 97}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "61"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "set2=set(sample_list_2)\n",
+    "print(set2)\n",
+    "len(set2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "#Al no tener la condición de que sean unicos al hacerlos set se eliminian los que esten repetidos"
    ]
   },
   {
@@ -109,11 +207,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3}\n",
+      "{3, 7}\n",
+      "{9, 3, 7}\n",
+      "{11, 9, 3, 7}\n",
+      "{3, 7, 9, 11, 12}\n",
+      "{3, 7, 9, 11, 12, 14}\n",
+      "{3, 7, 9, 11, 12, 14, 21}\n",
+      "{3, 7, 9, 11, 12, 14, 21, 25}\n",
+      "{3, 7, 9, 11, 12, 14, 21, 25, 27}\n",
+      "{3, 7, 9, 11, 12, 14, 21, 25, 27, 28}\n",
+      "{3, 7, 9, 11, 12, 14, 21, 25, 27, 28, 29}\n",
+      "{3, 7, 9, 11, 12, 14, 21, 25, 27, 28, 29, 31}\n",
+      "{34, 3, 7, 9, 11, 12, 14, 21, 25, 27, 28, 29, 31}\n",
+      "{34, 3, 36, 7, 9, 11, 12, 14, 21, 25, 27, 28, 29, 31}\n",
+      "{34, 3, 36, 37, 7, 9, 11, 12, 14, 21, 25, 27, 28, 29, 31}\n",
+      "{34, 3, 36, 37, 7, 9, 11, 12, 43, 14, 21, 25, 27, 28, 29, 31}\n",
+      "{34, 3, 36, 37, 7, 9, 11, 12, 43, 14, 46, 21, 25, 27, 28, 29, 31}\n",
+      "{34, 3, 36, 37, 7, 9, 11, 12, 43, 14, 46, 50, 21, 25, 27, 28, 29, 31}\n",
+      "{3, 7, 9, 11, 12, 14, 21, 25, 27, 28, 29, 31, 34, 36, 37, 43, 46, 50, 55}\n",
+      "{3, 7, 9, 11, 12, 14, 21, 25, 27, 28, 29, 31, 34, 36, 37, 43, 46, 50, 55, 57}\n",
+      "{3, 7, 9, 11, 12, 14, 21, 25, 27, 28, 29, 31, 34, 36, 37, 43, 46, 50, 55, 57, 58}\n",
+      "{3, 7, 9, 11, 12, 14, 21, 25, 27, 28, 29, 31, 34, 36, 37, 43, 46, 50, 55, 57, 58, 61}\n",
+      "{3, 7, 9, 11, 12, 14, 21, 25, 27, 28, 29, 31, 34, 36, 37, 43, 46, 50, 55, 57, 58, 61, 64}\n",
+      "{3, 7, 9, 11, 12, 14, 21, 25, 27, 28, 29, 31, 34, 36, 37, 43, 46, 50, 55, 57, 58, 61, 64, 68}\n",
+      "{3, 7, 9, 11, 12, 14, 21, 25, 27, 28, 29, 31, 34, 36, 37, 43, 46, 50, 55, 57, 58, 61, 64, 68, 79}\n",
+      "{3, 7, 9, 11, 12, 14, 21, 25, 27, 28, 29, 31, 34, 36, 37, 43, 46, 50, 55, 57, 58, 61, 64, 68, 79, 84}\n",
+      "{3, 7, 9, 11, 12, 14, 21, 25, 27, 28, 29, 31, 34, 36, 37, 43, 46, 50, 55, 57, 58, 61, 64, 68, 79, 84, 86}\n",
+      "{3, 7, 9, 11, 12, 14, 21, 25, 27, 28, 29, 31, 34, 36, 37, 43, 46, 50, 55, 57, 58, 61, 64, 68, 79, 84, 86, 96}\n",
+      "{3, 7, 9, 11, 12, 14, 21, 25, 27, 28, 29, 31, 34, 36, 37, 43, 46, 50, 55, 57, 58, 61, 64, 68, 79, 84, 86, 96, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here usando for\n",
+    "set3 = set()\n",
+    "for x in range(100):\n",
+    "    if x in set1 and x not in set2:\n",
+    "        set3.add(x)\n",
+    "        print(set3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 3, 7, 9, 11, 12, 14, 21, 25, 27, 28, 29, 31, 34, 36, 37, 43, 46, 50, 55, 57, 58, 61, 64, 68, 79, 84, 86, 96, 99, 100}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Experimento https://www.geeksforgeeks.org/python-set-difference/\n",
+    "set3 = set1.difference(set2)\n",
+    "print(set3)"
    ]
   },
   {
@@ -125,11 +283,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{4}\n",
+      "{4, 5}\n",
+      "{13, 4, 5}\n",
+      "{16, 13, 4, 5}\n",
+      "{4, 5, 13, 16, 23}\n",
+      "{4, 5, 13, 16, 23, 56}\n",
+      "{4, 5, 69, 13, 16, 23, 56}\n",
+      "{4, 5, 69, 75, 13, 16, 23, 56}\n",
+      "{4, 5, 69, 75, 13, 16, 80, 23, 56}\n",
+      "{4, 5, 69, 75, 13, 16, 80, 87, 23, 56}\n",
+      "{4, 5, 69, 75, 13, 16, 80, 87, 23, 56, 88}\n",
+      "{4, 5, 69, 75, 13, 16, 80, 87, 23, 56, 88, 92}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here usando for\n",
+    "set4 = set()\n",
+    "for x in range(100):\n",
+    "    if x in set2 and x not in set1:\n",
+    "        set4.add(x)\n",
+    "        print(set4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{4, 5, 69, 75, 13, 16, 80, 87, 23, 56, 88, 92}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Experimento \n",
+    "set4 = set2.difference(set1)\n",
+    "print(set4)"
    ]
   },
   {
@@ -141,11 +342,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 6, 8, 10, 15, 17, 20, 22, 24, 26, 30, 32, 33, 35, 38, 42, 44, 45, 47, 48, 49, 51, 52, 53, 54, 60, 62, 63, 65, 66, 67, 70, 72, 73, 74, 76, 77, 81, 82, 83, 85, 89, 90, 91, 93, 94, 95, 97}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set5 = set1.intersection(set2)\n",
+    "print(set5)"
    ]
   },
   {
@@ -165,11 +376,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n",
+      "61\n",
+      "31\n",
+      "12\n",
+      "49\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "print(len(set1))\n",
+    "print(len(set2))\n",
+    "print(len(set3))\n",
+    "print(len(set4))\n",
+    "print(len(set5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "#no entiendo lo de la math formular, ¿me la tengo que inventar?"
    ]
   },
   {
@@ -181,11 +418,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6 = set()"
    ]
   },
   {
@@ -197,11 +435,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 6, 7, 8, 9, 10, 11, 12, 14, 15, 17, 20, 21, 22, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 57, 58, 60, 61, 62, 63, 64, 65, 66, 67, 68, 70, 72, 73, 74, 76, 77, 79, 81, 82, 83, 84, 85, 86, 89, 90, 91, 93, 94, 95, 96, 97, 99, 100}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6.update(set3)\n",
+    "set6.update(set5)\n",
+    "print(set6)"
    ]
   },
   {
@@ -213,11 +462,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1 == set6"
    ]
   },
   {
@@ -229,11 +490,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set2.issubset(set1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set3.issubset(set1)"
    ]
   },
   {
@@ -247,11 +540,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "aggregate1 = set3.union(set4, set5)\n",
+    "aggregate2 = set1.union(set2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Comprobación\n",
+    "aggregate1 == aggregate2"
    ]
   },
   {
@@ -263,11 +579,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 6, 7, 8, 9, 10, 11, 12, 14, 15, 17, 20, 21, 22, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 57, 58, 60, 61, 62, 63, 64, 65, 66, 67, 68, 70, 72, 73, 74, 76, 77, 79, 81, 82, 83, 84, 85, 86, 89, 90, 91, 93, 94, 95, 96, 97, 99, 100}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "79"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "#pop se utiliza para eliminar \n",
+    "set1.pop()\n",
+    "print(set1)\n",
+    "len(set1)#Para comprobar que se han eliminado"
    ]
   },
   {
@@ -283,12 +621,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 2, 3, 4, 7, 8, 12, 13, 14, 15, 17, 18, 20, 22, 23, 24, 25, 26, 27, 28, 30, 32, 33, 34, 35, 36, 38, 40, 42, 43, 44, 45, 47, 48, 50, 53, 54, 55, 60, 63, 66, 67, 70, 72, 73, 74, 76, 77, 78, 80, 82, 83, 85, 86, 87, 88, 90, 92, 94, 96, 97, 98, 100}\n",
+      "63\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "for x in list_to_remove:\n",
+    "    if x in set1:\n",
+    "        set1.remove(x)\n",
+    "print(set1)\n",
+    "print(len(set1))#Para comprobar que se han eliminado"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -307,49 +667,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
-  },
-  "toc": {
-   "base_numbering": 1,
-   "nav_menu": {},
-   "number_sections": false,
-   "sideBar": true,
-   "skip_h1_title": false,
-   "title_cell": "Table of Contents",
-   "title_sidebar": "Contents",
-   "toc_cell": false,
-   "toc_position": {},
-   "toc_section_display": true,
-   "toc_window_display": true
-  },
-  "varInspector": {
-   "cols": {
-    "lenName": 16,
-    "lenType": 16,
-    "lenVar": 40
-   },
-   "kernels_config": {
-    "python": {
-     "delete_cmd_postfix": "",
-     "delete_cmd_prefix": "del ",
-     "library": "var_list.py",
-     "varRefreshCmd": "print(var_dic_list())"
-    },
-    "r": {
-     "delete_cmd_postfix": ") ",
-     "delete_cmd_prefix": "rm(",
-     "library": "var_list.r",
-     "varRefreshCmd": "cat(var_dic_list()) "
-    }
-   },
-   "types_to_exclude": [
-    "module",
-    "function",
-    "builtin_function_or_method",
-    "instance",
-    "_Feature"
-   ],
-   "window_display": false
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
